--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^5.0.0",
     "react-thunk": "^1.0.0",
     "redux-thunk": "^2.3.0"
   },
@@ -36,7 +36,7 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^1.19.1",
+    "nodemon": "^2.0.15",
     "redux": "^4.0.4"
   }
 }
