--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
+  "engines": {
+    "node": "16.14"
+  },
   "dependencies": {
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
